--- a/Example/Podfile
+++ b/Example/Podfile
@@ -11,6 +11,7 @@ target 'VideoClap_Example' do
   pod 'SnapKit', '4.2.0'
   
   pod 'SwiftyBeaver'
+  pod 'SVProgressHUD'
 end
 
 def config_rule(new_rule, file_patterns, output_files, script)
